--- a/opdracht-1/styles.css
+++ b/opdracht-1/styles.css
@@ -14,30 +14,57 @@ img {
 }
 
 
+/* 1.1 Geef de 'img' tag in the header een ID en zet zijn breedte op 100% */
+#image-ciaotutti {
+    max-width: 100%;
+}
+
 /* 1.2 Verander de kleur van alle list items in de unordered list naar hsl(110, 29%, 52%) */
-
-
+li {
+    color: hsl(110, 29%, 52%);
+}
 
 /* 1.3 Geef de 'span' tag in de footer een beschrijvende class name en maak de lettergrootte kleiner  */
-
-
+.copyright {
+    font-size: smaller;
+}
 
 /* 1.4 Haal de text-decoration van navigatie-links weg, geef onbezochte links de kleur hsl(359, 79%, 56%) en verander de kleur wanneer de gebruiker er overheen hovert. */
-
+li > a:link {
+    color: hsl(359, 79%, 56%) ;
+}
+li > a:hover {
+    color: hsl(110, 29%, 52%);
+}
+li > a {
+    text-decoration: none;
+}
 
 
 /* 1.5 Maak een hover- en visited stijl voor alle links in 'main'. */
-
+a:visited {
+    color: hsl(45, 100%, 50%);
+}
+a:hover {
+    color: hsl(45, 20%, 56%) ;
+}
 
 
 /* Verander de achtergrond van de SignUp button. Tip: https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors  */
+input[type="submit" i] {
+    background-color: red;
 
+}
 
 
 /* Geef het tekst-veld een blauwe rand wanneer hij in focus is */
-
+input:focus[type="text" i] {
+    outline: none;
+    border: 1px solid blue;
+}
 
 
 /* Target alle heading tags op de pagina en zet hun font-family op 'Noto Sans JP', sans-serif */
-
-
+header {
+    font-family: 'Noto Sans JP', sans-serif;
+}
