--- a/opdracht-2/styles.css
+++ b/opdracht-2/styles.css
@@ -3,3 +3,46 @@
 ========================================================= */
 
 /* Schrijf hier  jouw CSS! */
+.one{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+/*2.2*/
+.two {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+/*2.3*/
+.three {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.three ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 300px;
+}
+
+/*2.4*/
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/*2.5*/
+.five h1 {
+
+}
